# helloprint-poc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
src/: app.py  features.py  hpo.py  inference.py  synthetic_generator.py  train.py
